# class-d-amp

./: .gitignore  main.ipynb  pyproject.toml  report1.nsys-rep
.devcontainer/: Dockerfile  devcontainer.json
JupyterLab/: gpu.ipynb  jupyter.sh  kernel.cu  kernel.exp  kernel.lib  linear_func.ipynb  requirements.txt
Loop Gain Calculator/: compile.hpp  kernel.cu  ltspice-parse.cpp  ltspice-parse.hpp  main.cpp  parse.cpp  parse.hpp
SPICE/: Class D Full.asc  Class D Simplified.asc  Class D v0_1.asc  GAN140-650EBE.asy  GAN140-650EBE_LTspice.lib  ISO7710.asy  ISO7710.lib  LMG1210.asy  LMG1210_TRANS.lib  OPA1637.asy  PMV240SP.lib  SmallSignal.asc
SapWin/: Class-D MFB.crc  Class-D MFB.fdt  Class-D MFB.out  Class-D MFB.par  Class-D MFB.par.fdt  Class-D MFB.sch
loop_analysis/: .gitignore  Class-D MFB.out  jupyter.sh  main.ipynb  requirements.txt
loop_analysis/.virtual_documents/: main.ipynb
loop_analysis/LTspice/: loop_filter_sim.asc
loop_analysis/Matlab/: class_d.slx  class_d.slx.autosave  class_d.slxc  class_d_acc.mexw64  class_d_mfb.slx  thd_analysis.mlx
loop_analysis/QSapecNG/: Lead_14.info  MFB_BP.info  MFB_Filt.info
loop_analysis/SapWin/: Class-D BP.crc  Class-D BP.out  Class-D BP.par  Class-D MFB.cir  Class-D MFB.crc  Class-D MFB.fdt  Class-D MFB.out  Class-D MFB.par  Class-D MFB.sch  Lead.out  Lead.par  Lead.sch
loop_analysis/modules/: calc_resp.py  sapwin_optimize.py
loop_analysis/python/: jupyter.sh  lcapy.ipynb  lcapy_full.ipynb  main.ipynb  requirements.txt  (+1 more)
modules/: calc_resp.py  lcapy_optimize.py  problem.py  sapwin.py
notebooks/: ucd.py
(+131 files in other folders)
