[project]
name = "class-d-amp"
version = "0.1.0"
description = "Development of loop architectures for Class D amplifiers"
classifiers = ["Private :: Do Not Upload"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "class-d-amp",
    "marimo[recommended]>=0.13.10",
]

[tool.uv.sources]
socd = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.marimo.experimental]
lsp = true

[tool.marimo.language_servers.pylsp]
enabled = true  

