[project]
name = "class-d-amp"
version = "0.1.0"
description = "Development of loop architectures for Class D amplifiers"
classifiers = ["Private :: Do Not Upload"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo[recommended]>=0.13.10",
    "socd[cuda]",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
socd = { workspace = true }

[tool.marimo.experimental]
lsp = true

[tool.marimo.language_servers.pylsp]
enabled = true  

